<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="16dp">

    <ImageView
        android:id="@+id/imageBox"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:contentDescription="@string/imageofprof"
        android:src="@mipmap/ic_launcher" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="75dp">

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/titlerow"
            android:textColor="#000"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </TextView>

        <TextView
            android:id="@+id/descriptionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:text="@string/titleRow"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleText" />

        <Button
            android:id="@+id/bookingButton"
            android:layout_width="92dp"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="13dp"
            android:background="@android:color/transparent"
            android:text="@string/booking"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/profPlus"
            app:layout_constraintTop_toTopOf="parent"
            tools:background="#62EC3C" />

        <Button
            android:id="@+id/profPlus"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="13dp"
            android:bottomLeftRadius="25dp"
            android:bottomRightRadius="25dp"
            android:text="@string/maggiore"
            android:textSize="24sp"
            android:topLeftRadius="25dp"
            android:topRightRadius="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>