<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignUp">


    <TextView
            android:text="@string/registrati"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.103"
            android:textSize="34sp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_id32"
            android:inputType="text"
            android:hint="@string/nome"
            android:ems="10"
            android:id="@+id/signup_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.151"
            android:autofillHints="@string/nome" app:layout_constraintTop_toBottomOf="@+id/textView"
    />
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_id32"
            android:inputType="text"
            android:hint="@string/cognome"
            android:ems="10"
            android:id="@+id/signup_surname"
            app:layout_constraintTop_toBottomOf="@+id/signup_name"
            android:layout_marginTop="36dp"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TextFields"
            android:autofillHints="@string/cognome" app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:drawableRight="@drawable/ic_email32"
            android:ems="10"
            android:id="@+id/signup_email"
            app:layout_constraintTop_toBottomOf="@+id/signup_surname"
            android:layout_marginTop="36dp"
            tools:ignore="TextFields"
            android:autofillHints="@string/email" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:drawableRight="@drawable/ic_password32"
            android:ems="10"
            android:id="@+id/signup_password"
            app:layout_constraintTop_toBottomOf="@+id/signup_email"
            android:layout_marginTop="36dp"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TextFields"
            android:autofillHints="@string/password" app:layout_constraintEnd_toEndOf="parent"/>
    <ProgressBar
            android:id="@+id/signup_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/signup_password"/>

    <Button
            android:text="@string/registrati"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signup_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintVertical_bias="0.281"
            app:layout_constraintTop_toBottomOf="@+id/signup_password"/>
    <TextView
            android:text="@string/hai_gi_un_account_accedi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_text"
            app:layout_constraintStart_toStartOf="@+id/signup_password"
            android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/signup_button"
            android:layout_marginStart="32dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>