<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Login">


    <TextView
            android:text="@string/accedi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.113"
            android:textSize="34sp"
            app:layout_constraintHorizontal_bias="0.474"/>
    <EditText
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:ems="10"
            android:id="@+id/login_email"
            android:drawableRight="@drawable/ic_email32"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.2"
            android:autofillHints="@string/email"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintHorizontal_bias="0.495"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:drawableRight="@drawable/ic_password32"
            android:ems="10"
            android:id="@+id/login_password"
            app:layout_constraintTop_toBottomOf="@+id/login_email"
            android:layout_marginTop="36dp"
            android:autofillHints="@string/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    <ProgressBar
            android:id="@+id/login_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/login_password"/>
    <Button
            android:text="@string/accedi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintVertical_bias="0.193"
            app:layout_constraintTop_toBottomOf="@+id/login_password"/>
    <TextView
            android:text="@string/non_hai_ancora_un_account_registrati"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/signup_text"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/login_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"/>
</androidx.constraintlayout.widget.ConstraintLayout>